[tool.poetry]
name = "ludum"
version = "0.1.0"
description = ""
authors = ["MF <mooglefrooglian@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.4"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
